--- a/extension-manifest-v3/src/_locales/es/messages.json
+++ b/extension-manifest-v3/src/_locales/es/messages.json
@@ -38,14 +38,14 @@
     "message": "¿Seguro que quieres desactivar la vista previa de rastreadores?"
   },
   "are_you_sure_you_want_to_keep_ghostery_disabled_": {
-    "message": "Are you sure you want to keep Ghostery disabled?"
+    "message": "¿Seguro que quieres mantener Ghostery deshabilitado?"
   },
   "audio_video_player": {
     "message": "Reproductor de audio/vídeo",
     "description": "Tracker category name"
   },
   "automatically_rejects_of_cookie_consent_notices_": {
-    "message": "Automatically rejects of cookie consent notices."
+    "message": "Rechaza automáticamente los avisos de consentimiento de cookies."
   },
   "back": {
     "message": "Atrás"
@@ -67,7 +67,7 @@
     "message": "Limpiar todo"
   },
   "click_the_puzzle_icon_next_to_the_search_bar_and_pin_ghostery_to_your_toolbar_": {
-    "message": "Click the puzzle icon next to the search bar and pin Ghostery to your toolbar."
+    "message": "Haz clic en el icono con forma de puzle que está junto a la barra de búsqueda y ancla Ghostery a la barra de herramientas."
   },
   "comments": {
     "message": "Comentarios",
@@ -103,13 +103,13 @@
     "message": "Deshabilitado"
   },
   "displays_the_tracker_count_on_the_ghostery_icon_in_the_browser_toolbar_": {
-    "message": "Displays the tracker count on the Ghostery icon in the browser toolbar."
+    "message": "Muestra el número de rastreadores en el icono de Ghostery de la barra de herramientas del navegador."
   },
   "done": {
     "message": "Hecho"
   },
   "eliminates_ads_on_wesbites_for_safe_and_fast_browsing_": {
-    "message": "Eliminates ads on wesbites for safe and fast browsing."
+    "message": "Elimina los anuncios de los sitios web, para navegar de forma rápida y segura."
   },
   "email": {
     "message": "Correo electrónico",
@@ -119,7 +119,7 @@
     "message": "Habilitar Ghostery"
   },
   "enable_ghostery_to_browse_the_web_safer__faster__and_with_less_ads_": {
-    "message": "Enable Ghostery to browse the web safer, faster, and with less ads."
+    "message": "Habilita Ghostery para navegar por la red de forma más rápida y segura, y con menos anuncios."
   },
   "enable_ghostery_to_get_started": {
     "message": "Activa Ghostery para empezar"
@@ -142,10 +142,10 @@
     "message": "Para obtener más información, lee todos nuestros"
   },
   "ghostery_browser_extension_is_installed_in_your_browser_but_is_inactive__you_are_browsing_the_web_unprotected_": {
-    "message": "Ghostery Browser Extension is installed in your browser but is inactive. You are browsing the web unprotected."
+    "message": "La extensión de navegador Ghostery está instalada en el navegador, pero está inactiva. Estás navegando por la red sin protección."
   },
   "ghostery_can_t_block_them_due_to_missing_permissions_": {
-    "message": "Ghostery can't block them due to missing permissions."
+    "message": "Ghostery no puede bloquearlos, porque le faltan permisos."
   },
   "ghostery_has_been_resumed_on_this_site_": {
     "message": "Ghostery se ha reanudado en este sitio."
@@ -154,10 +154,10 @@
     "message": "Ghostery no tiene nada que hacer en esta página"
   },
   "ghostery_is_all_set_to_stop_trackers_in_their_tracks_and_protect_your_privacy_while_browsing_": {
-    "message": "Ghostery is all set to stop trackers in their tracks and protect your privacy while browsing!"
+    "message": "¡Ghostery está listo para pararles los pies a los rastreadores y proteger tu privacidad mientras navegas!"
   },
   "ghostery_is_disabled": {
-    "message": "Ghostery is disabled"
+    "message": "Ghostery está deshabilitado"
   },
   "ghostery_is_paused_on_this_site_": {
     "message": "Ghostery está en pausa en este sitio."
@@ -169,13 +169,13 @@
     "message": "Política de privacidad de Ghostery"
   },
   "ghostery_protects_your_privacy_by_detecting_and_neutralizing_different_types_of_data_collection_including_ads__trackers__and_cookie_pop_ups_": {
-    "message": "Ghostery protects your privacy by detecting and neutralizing different types of data collection including ads, trackers, and cookie pop-ups."
+    "message": "Ghostery protege tu privacidad detectando y neutralizando distintos tipos de elementos que recopilan datos, como los anuncios, los rastreadores y las ventanas emergentes de cookies."
   },
   "ghostery_settings": {
     "message": "Ajustes de Ghostery"
   },
   "ghostery_stops_trackers_in_their_tracks_and_prevents_you_from_being_profiled_by_data_brokers_": {
-    "message": "Ghostery stops trackers in their tracks and prevents you from being profiled by data brokers."
+    "message": "Ghostery les para los pies a los rastreadores y evita que los intermediarios de datos realicen perfiles sobre ti."
   },
   "ghostery_will_be_paused_on_this_site__you_can_change_this_at_any_time_in_ghostery_settings_to_stop_trackers_and_ads_from_tracking_you_around_the_web": {
     "message": "Ghostery se pausará en este sitio. Esto se puede cambiar en cualquier momento en la configuración de Ghostery para evitar que los rastreadores y los anuncios te rastreen en la web"
@@ -187,29 +187,35 @@
     "message": "Ghostery se pausará en este sitio durante 1 hora"
   },
   "ghostery_will_show_how_many_trackers_were_blocked_on_a_page__clicking_on_the_ghostery_icon_reveals_more_detailed_information_": {
-    "message": "Ghostery will show how many trackers were blocked on a page. Clicking on the Ghostery icon reveals more detailed information."
+    "message": "Ghostery mostrará cuántos rastreadores ha bloqueado en una página. Si haces clic en el icono de Ghostery, verás información más detallada."
   },
   "hosting": {
     "message": "Hosting",
     "description": "Tracker category name"
   },
   "ignore": {
-    "message": "Ignore"
+    "message": "Ignorar"
   },
   "information_about_web_trackers_will_be_shared_in_accordance_with_our__a_href__@_0___privacy_policy__a_": {
-    "message": "Information about web trackers will be shared in accordance with our <a href=\"$${0}\">Privacy Policy</a>"
+    "message": "La información sobre los rastreadores web se compartirá de acuerdo con nuestra <a href=\"$${0}\">Política de privacidad</a>"
   },
   "it_exists_thanks_to_micro_contributions_of_every_ghostery_user_who_chooses_to_send_non_personal_information_to_whotracks_me__the_input_enables_ghostery_to_provide_real_time_intel_on_trackers_which_in_turn_provides_protection_to_the_entire_ghostery_community_": {
     "message": "Existe gracias a las microcontribuciones de cada usuario de Ghostery que decide enviar información no personal a WhoTracks.Me. Esta aportación permite a Ghostery proporcionar información en tiempo real sobre los rastreadores, lo que a su vez proporciona protección a toda la comunidad de Ghostery."
   },
   "keep_disabled": {
-    "message": "Keep disabled"
+    "message": "Mantener deshabilitado"
   },
   "learn_more": {
     "message": "Más información"
   },
   "let_ghostery_be_your_complete_privacy_advocate_and_reject_all_popups_and_tracking_for_you__or_do_it_yourself_": {
     "message": "Permite que Ghostery sea tu defensor de la privacidad y rechace todas las ventanas emergentes y el seguimiento... ¡o hazlo tú personalmente!"
+  },
+	"manifest_name": {
+    "message": "Ghostery – Bloqueador de anuncios para privacidad"
+  },
+  "manifest_short_description": {
+    "message": "Ghostery es una potente extensión para tu privacidad. Bloquea anuncios, detiene rastreadores y acelera sitios web."
   },
   "menu": {
     "message": "Menú"
@@ -270,13 +276,13 @@
     "message": "Se requiere permiso"
   },
   "pin_extension_for_easy_access": {
-    "message": "Pin Extension for easy access"
+    "message": "Ancla la extensión para acceder a ella fácilmente"
   },
   "pin_it_here": {
-    "message": "Pin it here"
+    "message": "Ánclala aquí"
   },
   "prevents_various_tracking_techniques_using_ai_driven_technology_": {
-    "message": "Prevents various tracking techniques using AI-driven technology."
+    "message": "Previene diversas técnicas de rastreo con tecnología de inteligencia artificial."
   },
   "privacy_policy": {
     "message": "política de privacidad"
@@ -291,7 +297,7 @@
     "message": "Leer más sobre WhoTracks.Me"
   },
   "replaces_the_ghostery_icon_in_the_browser_toolbar_with_the_tracker_wheel_": {
-    "message": "Replaces the Ghostery icon in the browser toolbar with the tracker wheel."
+    "message": "Sustituye el icono de Ghostery de la barra de herramientas del navegador por la rueda de rastreadores."
   },
   "report_a_broken_page": {
     "message": "Informar página rota"
@@ -306,10 +312,10 @@
     "message": "Ajustes"
   },
   "setup_successful": {
-    "message": "Setup Successful"
+    "message": "La configuración ha terminado"
   },
   "shows_the_tracker_preview_beside_search_results_": {
-    "message": "Shows the tracker preview beside search results."
+    "message": "Muestra la vista previa de rastreadores junto a los resultados de la búsqueda."
   },
   "sign_in": {
     "message": "Conectarse"
@@ -376,10 +382,10 @@
     "message": "¿Qué es WhoTracks.Me?"
   },
   "what_s_next_": {
-    "message": "What’s next?"
+    "message": "¿Qué es lo siguiente?"
   },
   "when_pausing_ghostery_on_individual_websites__those_websites_will_appear_here_": {
-    "message": "When pausing Ghostery on individual websites, those websites will appear here."
+    "message": "Si pausas Ghostery en algunos sitios web concretos, esos sitios aparecerán aquí."
   },
   "whotracks_me__operated_by_ghostery__is_an_integral_part_of_ghostery_s_ai_anti_tracking_technology__it_is_a_comprehensive_global_resource_on_trackers__bringing_transparency_to_web_tracking_": {
     "message": "WhoTracks.Me, operado por Ghostery, es una parte integral de la tecnología anti-seguimiento de Ghostery. Es un recurso global completo sobre rastreadores, que aporta transparencia al rastreo web."
@@ -394,18 +400,18 @@
     "message": "Sí"
   },
   "you_can_adjust_the_settings_below__we_recommend_keeping_them_on_at_all_times_": {
-    "message": "You can adjust the settings below. We recommend keeping them ON at all times."
+    "message": "Puedes cambiar los ajustes abajo. Te recomendamos mantenerlos activados en todo momento."
   },
   "you_can_always_change_these_settings_in_the_nbsp__strong_ghostery_control_panel__strong__": {
     "message": "Siempre puedes cambiar estos ajustes en el&nbsp;<strong>panel de control de Ghostery</strong>."
   },
   "you_can_change_your_mind_at_any_time_and_enable_ghostery_in_the_ghostery_panel_to_start_tracking_the_trackers_": {
-    "message": "You can change your mind at any time and enable Ghostery in the Ghostery panel to start tracking the trackers."
+    "message": "Puedes cambiar de opinión en cualquier momento y habilitar Ghostery en su panel para empezar a vigilar a los rastreadores."
   },
   "you_will_no_longer_see_tracker_wheels_next_to_the_search_results_": {
     "message": "Ya no verás las ruedas de los rastreadores junto a los resultados de búsqueda."
   },
   "your_privacy_features_": {
-    "message": "Your Privacy Features:"
+    "message": "Tus funciones de privacidad:"
   }
 }
