--- a/extension-manifest-v3/src/_locales/zh_TW/messages.json
+++ b/extension-manifest-v3/src/_locales/zh_TW/messages.json
@@ -38,14 +38,14 @@
     "message": "你確定要停用「追蹤器預覽」嗎？"
   },
   "are_you_sure_you_want_to_keep_ghostery_disabled_": {
-    "message": "Are you sure you want to keep Ghostery disabled?"
+    "message": "確定要繼續停用 Ghostery 嗎？"
   },
   "audio_video_player": {
     "message": "音訊/視訊播放器",
     "description": "Tracker category name"
   },
   "automatically_rejects_of_cookie_consent_notices_": {
-    "message": "Automatically rejects of cookie consent notices."
+    "message": "自動拒絕 cookie 同意通知。"
   },
   "back": {
     "message": "返回"
@@ -67,7 +67,7 @@
     "message": "全部清除"
   },
   "click_the_puzzle_icon_next_to_the_search_bar_and_pin_ghostery_to_your_toolbar_": {
-    "message": "Click the puzzle icon next to the search bar and pin Ghostery to your toolbar."
+    "message": "點擊搜尋欄位旁邊的拼圖圖示，將 Ghostery 釘選至工具列。"
   },
   "comments": {
     "message": "評論",
@@ -103,13 +103,13 @@
     "message": "已停用"
   },
   "displays_the_tracker_count_on_the_ghostery_icon_in_the_browser_toolbar_": {
-    "message": "Displays the tracker count on the Ghostery icon in the browser toolbar."
+    "message": "在瀏覽器工具列中的 Ghostery 圖示上顯示追蹤器記數。"
   },
   "done": {
     "message": "完成"
   },
   "eliminates_ads_on_wesbites_for_safe_and_fast_browsing_": {
-    "message": "Eliminates ads on wesbites for safe and fast browsing."
+    "message": "消除網站上的廣告，獲得安全又快速的瀏覽體驗。"
   },
   "email": {
     "message": "電郵",
@@ -119,7 +119,7 @@
     "message": "啟用 Ghostery"
   },
   "enable_ghostery_to_browse_the_web_safer__faster__and_with_less_ads_": {
-    "message": "Enable Ghostery to browse the web safer, faster, and with less ads."
+    "message": "啟用  Ghostery，開始更安全、更快速地瀏覽網頁，同時減少廣告量。"
   },
   "enable_ghostery_to_get_started": {
     "message": "啟用 Ghostery 開始"
@@ -142,10 +142,10 @@
     "message": "如欲了解更多訊息，請閱讀我們的全文"
   },
   "ghostery_browser_extension_is_installed_in_your_browser_but_is_inactive__you_are_browsing_the_web_unprotected_": {
-    "message": "Ghostery Browser Extension is installed in your browser but is inactive. You are browsing the web unprotected."
+    "message": "Ghostery 瀏覽器擴充程式已安裝至瀏覽器，但尚未啟用。你目前的網頁瀏覽未受保護。"
   },
   "ghostery_can_t_block_them_due_to_missing_permissions_": {
-    "message": "Ghostery can't block them due to missing permissions."
+    "message": "由於缺乏相關權限，Ghostery 無法阻擋。"
   },
   "ghostery_has_been_resumed_on_this_site_": {
     "message": "Ghostery 已在此網站上恢復。"
@@ -154,10 +154,10 @@
     "message": "Ghostery 與此頁面無關"
   },
   "ghostery_is_all_set_to_stop_trackers_in_their_tracks_and_protect_your_privacy_while_browsing_": {
-    "message": "Ghostery is all set to stop trackers in their tracks and protect your privacy while browsing!"
+    "message": "Ghostery 已經準備好阻擋追蹤器，並在你瀏覽網頁時保護你的隱私！"
   },
   "ghostery_is_disabled": {
-    "message": "Ghostery is disabled"
+    "message": "Ghostery 已關閉"
   },
   "ghostery_is_paused_on_this_site_": {
     "message": "Ghostery 已在此網站上暫停。"
@@ -169,13 +169,13 @@
     "message": "Ghostery 隱私權政策"
   },
   "ghostery_protects_your_privacy_by_detecting_and_neutralizing_different_types_of_data_collection_including_ads__trackers__and_cookie_pop_ups_": {
-    "message": "Ghostery protects your privacy by detecting and neutralizing different types of data collection including ads, trackers, and cookie pop-ups."
+    "message": "Ghostery 透過檢測並阻擋廣告、追蹤器和 cookie 彈跳視窗等數據收集方式保護你的隱私。"
   },
   "ghostery_settings": {
     "message": "Ghostery 設定"
   },
   "ghostery_stops_trackers_in_their_tracks_and_prevents_you_from_being_profiled_by_data_brokers_": {
-    "message": "Ghostery stops trackers in their tracks and prevents you from being profiled by data brokers."
+    "message": "Ghostery 幫你阻擋追蹤器，防止數據中介獲得你的個人資料。"
   },
   "ghostery_will_be_paused_on_this_site__you_can_change_this_at_any_time_in_ghostery_settings_to_stop_trackers_and_ads_from_tracking_you_around_the_web": {
     "message": "Ghostery 將在此網站上暫停。 你可以隨時在 Ghostery 設定中更改此設定，制止追蹤器和廣告在網路中追蹤你"
@@ -187,29 +187,35 @@
     "message": "Ghostery 將在此網站上暫停 1 小時"
   },
   "ghostery_will_show_how_many_trackers_were_blocked_on_a_page__clicking_on_the_ghostery_icon_reveals_more_detailed_information_": {
-    "message": "Ghostery will show how many trackers were blocked on a page. Clicking on the Ghostery icon reveals more detailed information."
+    "message": "Ghostery 將顯示頁面中已經阻擋的追蹤器數量。點擊 Ghostery 圖示可以顯示更多資訊。"
   },
   "hosting": {
     "message": "託管",
     "description": "Tracker category name"
   },
   "ignore": {
-    "message": "Ignore"
+    "message": "忽略"
   },
   "information_about_web_trackers_will_be_shared_in_accordance_with_our__a_href__@_0___privacy_policy__a_": {
-    "message": "Information about web trackers will be shared in accordance with our <a href=\"$${0}\">Privacy Policy</a>"
+    "message": "網頁追蹤器的資訊將依據我們的<a href=\"$${0}\">隱私權政策</a>分享"
   },
   "it_exists_thanks_to_micro_contributions_of_every_ghostery_user_who_chooses_to_send_non_personal_information_to_whotracks_me__the_input_enables_ghostery_to_provide_real_time_intel_on_trackers_which_in_turn_provides_protection_to_the_entire_ghostery_community_": {
     "message": "它的存在要歸功於每位選擇將非個人資料傳送到 WhoTracks.Me 的 Ghostery 用戶的微小貢獻。 這些資料的輸入使 Ghostery 能夠提供有關追蹤器的即時情報，進而為整個 Ghostery 社群提供保護。"
   },
   "keep_disabled": {
-    "message": "Keep disabled"
+    "message": "保持關閉"
   },
   "learn_more": {
     "message": "瞭解更多"
   },
   "let_ghostery_be_your_complete_privacy_advocate_and_reject_all_popups_and_tracking_for_you__or_do_it_yourself_": {
     "message": "讓 Ghostery 成為你的全面隱私倡議者，拒絕所有彈出式視窗和追蹤，或者你自己動手！"
+  },
+	"manifest_name": {
+    "message": "Ghostery – 隱私廣告攔截器"
+  },
+  "manifest_short_description": {
+    "message": "Ghostery是一個強效的隱私擴增功能。攔截廣告、制止追蹤器及加快網頁運行。"
   },
   "menu": {
     "message": "選單"
@@ -270,13 +276,13 @@
     "message": "需要權限"
   },
   "pin_extension_for_easy_access": {
-    "message": "Pin Extension for easy access"
+    "message": "釘選擴充程式即可方便使用"
   },
   "pin_it_here": {
-    "message": "Pin it here"
+    "message": "於此處釘選"
   },
   "prevents_various_tracking_techniques_using_ai_driven_technology_": {
-    "message": "Prevents various tracking techniques using AI-driven technology."
+    "message": "使用 AI 科技防止各種追蹤技術。"
   },
   "privacy_policy": {
     "message": "隱私權政策"
@@ -291,7 +297,7 @@
     "message": "在 WhoTracks.Me 上繼續閱讀"
   },
   "replaces_the_ghostery_icon_in_the_browser_toolbar_with_the_tracker_wheel_": {
-    "message": "Replaces the Ghostery icon in the browser toolbar with the tracker wheel."
+    "message": "將瀏覽器工具列中的 Ghostery 圖示換成追蹤器齒輪。"
   },
   "report_a_broken_page": {
     "message": "報告已損毀的網頁"
@@ -306,10 +312,10 @@
     "message": "設定"
   },
   "setup_successful": {
-    "message": "Setup Successful"
+    "message": "設定成功"
   },
   "shows_the_tracker_preview_beside_search_results_": {
-    "message": "Shows the tracker preview beside search results."
+    "message": "在搜尋結果旁顯示追蹤器預覽。"
   },
   "sign_in": {
     "message": "登入"
@@ -376,10 +382,10 @@
     "message": "什么是 WhoTracks.Me？"
   },
   "what_s_next_": {
-    "message": "What’s next?"
+    "message": "下一步是？"
   },
   "when_pausing_ghostery_on_individual_websites__those_websites_will_appear_here_": {
-    "message": "When pausing Ghostery on individual websites, those websites will appear here."
+    "message": "對個別網站暫停使用 Ghostery 後，這些網站會顯示在這裡。"
   },
   "whotracks_me__operated_by_ghostery__is_an_integral_part_of_ghostery_s_ai_anti_tracking_technology__it_is_a_comprehensive_global_resource_on_trackers__bringing_transparency_to_web_tracking_": {
     "message": "WhoTracks.Me 由 Ghostery 營運，是 Ghostery 人工智慧反追蹤技術不可或缺的一部分。 它是有關追蹤器的綜合性全球資源，使網路追蹤透明化。"
@@ -394,18 +400,18 @@
     "message": "是"
   },
   "you_can_adjust_the_settings_below__we_recommend_keeping_them_on_at_all_times_": {
-    "message": "You can adjust the settings below. We recommend keeping them ON at all times."
+    "message": "你可以在下方調整設定。我們建議你永遠保持啟用。"
   },
   "you_can_always_change_these_settings_in_the_nbsp__strong_ghostery_control_panel__strong__": {
     "message": "你可以隨時在 <strong>Ghostery 控制面板</strong>中更改這些設定。"
   },
   "you_can_change_your_mind_at_any_time_and_enable_ghostery_in_the_ghostery_panel_to_start_tracking_the_trackers_": {
-    "message": "You can change your mind at any time and enable Ghostery in the Ghostery panel to start tracking the trackers."
+    "message": "你隨時都可以在 Ghostery 面板開啟 Ghostery，開始追蹤追蹤器。"
   },
   "you_will_no_longer_see_tracker_wheels_next_to_the_search_results_": {
     "message": "你將不會再在搜尋結果旁邊看到追蹤器輪盤。"
   },
   "your_privacy_features_": {
-    "message": "Your Privacy Features:"
+    "message": "你的隱私功能："
   }
 }
