--- a/extension-manifest-v3/src/_locales/fr/messages.json
+++ b/extension-manifest-v3/src/_locales/fr/messages.json
@@ -38,14 +38,14 @@
     "message": "Voulez-vous vraiment désactiver l'aperçu des trackers ?"
   },
   "are_you_sure_you_want_to_keep_ghostery_disabled_": {
-    "message": "Are you sure you want to keep Ghostery disabled?"
+    "message": "Voulez-vous vraiment que Ghostery reste désactivé ?"
   },
   "audio_video_player": {
     "message": "Lecteur audio/vidéo ",
     "description": "Tracker category name"
   },
   "automatically_rejects_of_cookie_consent_notices_": {
-    "message": "Automatically rejects of cookie consent notices."
+    "message": "Refuse automatiquement les avis de consentement aux témoins."
   },
   "back": {
     "message": "Retour"
@@ -67,7 +67,7 @@
     "message": "Effacer tout"
   },
   "click_the_puzzle_icon_next_to_the_search_bar_and_pin_ghostery_to_your_toolbar_": {
-    "message": "Click the puzzle icon next to the search bar and pin Ghostery to your toolbar."
+    "message": "Cliquez sur l'icône de puzzle en regard de la barre de recherche et épinglez Ghostery à votre barre d'outils."
   },
   "comments": {
     "message": "Commentaires",
@@ -103,13 +103,13 @@
     "message": "Désactivé"
   },
   "displays_the_tracker_count_on_the_ghostery_icon_in_the_browser_toolbar_": {
-    "message": "Displays the tracker count on the Ghostery icon in the browser toolbar."
+    "message": "Affiche le décompte des trackers sur l'icône Ghostery dans la barre d'outils du navigateur."
   },
   "done": {
     "message": "Terminé"
   },
   "eliminates_ads_on_wesbites_for_safe_and_fast_browsing_": {
-    "message": "Eliminates ads on wesbites for safe and fast browsing."
+    "message": "Supprime les publicités sur les sites web pour une navigation sûre et rapide."
   },
   "email": {
     "message": "E-mail",
@@ -119,7 +119,7 @@
     "message": "Activer Ghostery"
   },
   "enable_ghostery_to_browse_the_web_safer__faster__and_with_less_ads_": {
-    "message": "Enable Ghostery to browse the web safer, faster, and with less ads."
+    "message": "Activez Ghostery pour parcourir le Web de manière plus sûre et plus rapide, et avec moins de publicités."
   },
   "enable_ghostery_to_get_started": {
     "message": "Donnez le feu vert à Ghostery"
@@ -142,10 +142,10 @@
     "message": "Pour plus d'information, lisez notre"
   },
   "ghostery_browser_extension_is_installed_in_your_browser_but_is_inactive__you_are_browsing_the_web_unprotected_": {
-    "message": "Ghostery Browser Extension is installed in your browser but is inactive. You are browsing the web unprotected."
+    "message": "L'extension de navigateur Ghostery est installée dans votre navigateur, mais elle est inactive. Vous parcourez le Web sans protection."
   },
   "ghostery_can_t_block_them_due_to_missing_permissions_": {
-    "message": "Ghostery can't block them due to missing permissions."
+    "message": "Ghostery ne peut pas les bloquer en raison d'autorisations manquantes."
   },
   "ghostery_has_been_resumed_on_this_site_": {
     "message": "Ghostery a été réactivé sur ce site."
@@ -154,10 +154,10 @@
     "message": "Il n'y a rien à faire sur cette page pour Ghostery"
   },
   "ghostery_is_all_set_to_stop_trackers_in_their_tracks_and_protect_your_privacy_while_browsing_": {
-    "message": "Ghostery is all set to stop trackers in their tracks and protect your privacy while browsing!"
+    "message": "Ghostery est prêt à protéger votre vie privée en mettant en échec les mouchards quand vous naviguez !"
   },
   "ghostery_is_disabled": {
-    "message": "Ghostery is disabled"
+    "message": "Ghostery est désactivé"
   },
   "ghostery_is_paused_on_this_site_": {
     "message": "Ghostery est en pause sur ce site."
@@ -169,13 +169,13 @@
     "message": "Politique de confidentialité de Ghostery"
   },
   "ghostery_protects_your_privacy_by_detecting_and_neutralizing_different_types_of_data_collection_including_ads__trackers__and_cookie_pop_ups_": {
-    "message": "Ghostery protects your privacy by detecting and neutralizing different types of data collection including ads, trackers, and cookie pop-ups."
+    "message": "Ghostery protège votre vie privée en détectant et en neutralisant différents types de collecte de données, notamment les publicités, les trackers et les fenêtres surgissantes relatives aux témoins."
   },
   "ghostery_settings": {
     "message": "Paramètres Ghostery"
   },
   "ghostery_stops_trackers_in_their_tracks_and_prevents_you_from_being_profiled_by_data_brokers_": {
-    "message": "Ghostery stops trackers in their tracks and prevents you from being profiled by data brokers."
+    "message": "Ghostery met en échec les trackers et empêche les courtiers en données de dresser votre profil."
   },
   "ghostery_will_be_paused_on_this_site__you_can_change_this_at_any_time_in_ghostery_settings_to_stop_trackers_and_ads_from_tracking_you_around_the_web": {
     "message": "Ghostery sera mis en pause sur ce site. Vous pouvez modifier cette option à tout moment dans les paramètres de Ghostery pour empêcher les trackers et les publicités de vous suivre sur le Web."
@@ -187,29 +187,35 @@
     "message": "Ghostery sera mis en pause sur ce site pour 1 heure."
   },
   "ghostery_will_show_how_many_trackers_were_blocked_on_a_page__clicking_on_the_ghostery_icon_reveals_more_detailed_information_": {
-    "message": "Ghostery will show how many trackers were blocked on a page. Clicking on the Ghostery icon reveals more detailed information."
+    "message": "Ghostery affichera le nombre de trackers bloqués sur une page. Vous pouvez obtenir des informations détaillées en cliquant sur l'icône Ghostery."
   },
   "hosting": {
     "message": "Hébergement",
     "description": "Tracker category name"
   },
   "ignore": {
-    "message": "Ignore"
+    "message": "Ignorer"
   },
   "information_about_web_trackers_will_be_shared_in_accordance_with_our__a_href__@_0___privacy_policy__a_": {
-    "message": "Information about web trackers will be shared in accordance with our <a href=\"$${0}\">Privacy Policy</a>"
+    "message": "Des informations sur les trackers web seront partagées conformément à notre <a href=\"$${0}\">politique de confidentialité</a>"
   },
   "it_exists_thanks_to_micro_contributions_of_every_ghostery_user_who_chooses_to_send_non_personal_information_to_whotracks_me__the_input_enables_ghostery_to_provide_real_time_intel_on_trackers_which_in_turn_provides_protection_to_the_entire_ghostery_community_": {
     "message": "Il existe grâce aux micro-contributions de chaque utilisateur de Ghostery qui choisit d'envoyer des informations non personnelles à WhoTracks.Me. Ces informations permettent à Ghostery de fournir des renseignements en temps réel sur les trackers, ce qui permet de protéger l'ensemble de la communauté Ghostery."
   },
   "keep_disabled": {
-    "message": "Keep disabled"
+    "message": "Maintenir désactivé"
   },
   "learn_more": {
     "message": "En savoir plus"
   },
   "let_ghostery_be_your_complete_privacy_advocate_and_reject_all_popups_and_tracking_for_you__or_do_it_yourself_": {
     "message": "Laissez Ghostery défendre vos convictions en rejetant les fenêtres surgissantes et mouchards, ou faites-le vous-même !"
+  },
+	"manifest_name": {
+    "message": "Ghostery – Bloqueur de publicité protégeant la vie privée"
+  },
+  "manifest_short_description": {
+    "message": "Ghostery est une puissante extension de protection de la vie privée. Bloquez les publicités, déjouez les outils de pistage et accélérez les sites Web."
   },
   "menu": {
     "message": "Menu"
@@ -270,13 +276,13 @@
     "message": "Autorisation requise"
   },
   "pin_extension_for_easy_access": {
-    "message": "Pin Extension for easy access"
+    "message": "Épingler l'extension pour un accès facile"
   },
   "pin_it_here": {
-    "message": "Pin it here"
+    "message": "L'épingler ici"
   },
   "prevents_various_tracking_techniques_using_ai_driven_technology_": {
-    "message": "Prevents various tracking techniques using AI-driven technology."
+    "message": "Empêche différentes techniques de suivi à l'aide d'une technologie basée sur l'IA."
   },
   "privacy_policy": {
     "message": "politique de confidentialité"
@@ -291,7 +297,7 @@
     "message": "Plus d'informations sur WhoTracks.Me"
   },
   "replaces_the_ghostery_icon_in_the_browser_toolbar_with_the_tracker_wheel_": {
-    "message": "Replaces the Ghostery icon in the browser toolbar with the tracker wheel."
+    "message": "Remplace l'icône Ghostery dans la barre d'outils du navigateur par l'anneau des trackers."
   },
   "report_a_broken_page": {
     "message": "Signaler un lien brisé"
@@ -306,10 +312,10 @@
     "message": "Paramètres"
   },
   "setup_successful": {
-    "message": "Setup Successful"
+    "message": "Configuration réussie"
   },
   "shows_the_tracker_preview_beside_search_results_": {
-    "message": "Shows the tracker preview beside search results."
+    "message": "Affiche l'aperçu des trackers à côté des résultats de recherche."
   },
   "sign_in": {
     "message": "Connexion"
@@ -376,10 +382,10 @@
     "message": "Qu'est-ce que WhoTracks.Me ?"
   },
   "what_s_next_": {
-    "message": "What’s next?"
+    "message": "Quelle est la suite ?"
   },
   "when_pausing_ghostery_on_individual_websites__those_websites_will_appear_here_": {
-    "message": "When pausing Ghostery on individual websites, those websites will appear here."
+    "message": "Lorsque vous mettez Ghostery en pause sur des sites web particuliers, ceux-ci apparaissent ici."
   },
   "whotracks_me__operated_by_ghostery__is_an_integral_part_of_ghostery_s_ai_anti_tracking_technology__it_is_a_comprehensive_global_resource_on_trackers__bringing_transparency_to_web_tracking_": {
     "message": "WhoTracks.Me, exploité par Ghostery, fait partie intégrante de la technologie anti-tracking AI de Ghostery. Il s'agit d'une ressource mondiale complète sur les trackers, apportant de la transparence au tracking web."
@@ -394,18 +400,18 @@
     "message": "Oui"
   },
   "you_can_adjust_the_settings_below__we_recommend_keeping_them_on_at_all_times_": {
-    "message": "You can adjust the settings below. We recommend keeping them ON at all times."
+    "message": "Vous pouvez ajuster les paramètres ci-dessous. Nous vous recommandons de les maintenir activés à tout moment."
   },
   "you_can_always_change_these_settings_in_the_nbsp__strong_ghostery_control_panel__strong__": {
     "message": "Vous pouvez accéder à ces paramètres à tout moment dans le&nbsp;<strong>panneau de commande</strong>."
   },
   "you_can_change_your_mind_at_any_time_and_enable_ghostery_in_the_ghostery_panel_to_start_tracking_the_trackers_": {
-    "message": "You can change your mind at any time and enable Ghostery in the Ghostery panel to start tracking the trackers."
+    "message": "Vous pouvez changer d'avis à tout moment et activer Ghostery dans le Panneau Ghostery pour commencer à suivre les trackers."
   },
   "you_will_no_longer_see_tracker_wheels_next_to_the_search_results_": {
     "message": "Vous ne verrez plus de camembert des trackers à côté des résultats de recherche."
   },
   "your_privacy_features_": {
-    "message": "Your Privacy Features:"
+    "message": "Vos fonctions de confidentialité :"
   }
 }
