--- a/extension-manifest-v3/src/_locales/ja/messages.json
+++ b/extension-manifest-v3/src/_locales/ja/messages.json
@@ -38,14 +38,14 @@
     "message": "Trackers Previewを無効にしてもよいですか？"
   },
   "are_you_sure_you_want_to_keep_ghostery_disabled_": {
-    "message": "Are you sure you want to keep Ghostery disabled?"
+    "message": "本当にGhosteryを無効にしたままでよいですか？"
   },
   "audio_video_player": {
     "message": "オーディオ/ビデオ・プレーヤー",
     "description": "Tracker category name"
   },
   "automatically_rejects_of_cookie_consent_notices_": {
-    "message": "Automatically rejects of cookie consent notices."
+    "message": "Cookieの同意通知を自動で拒否します。"
   },
   "back": {
     "message": "戻る"
@@ -67,7 +67,7 @@
     "message": "すべてクリア"
   },
   "click_the_puzzle_icon_next_to_the_search_bar_and_pin_ghostery_to_your_toolbar_": {
-    "message": "Click the puzzle icon next to the search bar and pin Ghostery to your toolbar."
+    "message": "検索バーの横にあるパズルのアイコンをクリックし、Ghosteryをツールバーに固定します。"
   },
   "comments": {
     "message": "コメント",
@@ -103,13 +103,13 @@
     "message": "無効化済み"
   },
   "displays_the_tracker_count_on_the_ghostery_icon_in_the_browser_toolbar_": {
-    "message": "Displays the tracker count on the Ghostery icon in the browser toolbar."
+    "message": "ブラウザのツールバーのGhosteryアイコンにトラッカー数を表示します。"
   },
   "done": {
     "message": "完了"
   },
   "eliminates_ads_on_wesbites_for_safe_and_fast_browsing_": {
-    "message": "Eliminates ads on wesbites for safe and fast browsing."
+    "message": "ウェブサイト上の広告を除去し、安全で高速なブラウジングを実現します。"
   },
   "email": {
     "message": "メール",
@@ -119,7 +119,7 @@
     "message": "Ghosteryを有効にする"
   },
   "enable_ghostery_to_browse_the_web_safer__faster__and_with_less_ads_": {
-    "message": "Enable Ghostery to browse the web safer, faster, and with less ads."
+    "message": "Ghosteryを有効にすることで、より安全に、より速く、より少ない広告でウェブを閲覧することができます。"
   },
   "enable_ghostery_to_get_started": {
     "message": "Ghosteryを有効にして開始する"
@@ -142,10 +142,10 @@
     "message": "詳細はこちらをご覧ください"
   },
   "ghostery_browser_extension_is_installed_in_your_browser_but_is_inactive__you_are_browsing_the_web_unprotected_": {
-    "message": "Ghostery Browser Extension is installed in your browser but is inactive. You are browsing the web unprotected."
+    "message": "Ghostery Browser Extensionはブラウザにインストールされていますが、非アクティブになっています。あなたは無防備にウェブを閲覧していることになります。"
   },
   "ghostery_can_t_block_them_due_to_missing_permissions_": {
-    "message": "Ghostery can't block them due to missing permissions."
+    "message": "Ghosteryは権限が足りないため、ブロックできません。"
   },
   "ghostery_has_been_resumed_on_this_site_": {
     "message": "Ghosteryがこのサイトで再開されました。"
@@ -154,10 +154,10 @@
     "message": "Ghosteryは、このページでは何もしません。"
   },
   "ghostery_is_all_set_to_stop_trackers_in_their_tracks_and_protect_your_privacy_while_browsing_": {
-    "message": "Ghostery is all set to stop trackers in their tracks and protect your privacy while browsing!"
+    "message": "Ghosteryは、トラッカーを足止めし、ブラウジング中のプライバシーを保護するようにきちんと設定されています!"
   },
   "ghostery_is_disabled": {
-    "message": "Ghostery is disabled"
+    "message": "Ghosteryが無効になっています"
   },
   "ghostery_is_paused_on_this_site_": {
     "message": "Ghosteryは、このサイトで一時停止しています。"
@@ -169,13 +169,13 @@
     "message": "Ghosteryプライバシー・ポリシー"
   },
   "ghostery_protects_your_privacy_by_detecting_and_neutralizing_different_types_of_data_collection_including_ads__trackers__and_cookie_pop_ups_": {
-    "message": "Ghostery protects your privacy by detecting and neutralizing different types of data collection including ads, trackers, and cookie pop-ups."
+    "message": "Ghosteryは、広告、トラッカー、Cookieポップアップなど、さまざまな種類のデータ収集を検知して無効化することで、お客様のプライバシーを保護します。"
   },
   "ghostery_settings": {
     "message": "Ghostery 設定"
   },
   "ghostery_stops_trackers_in_their_tracks_and_prevents_you_from_being_profiled_by_data_brokers_": {
-    "message": "Ghostery stops trackers in their tracks and prevents you from being profiled by data brokers."
+    "message": "Ghosteryはトラッカーの追跡を阻止し、データブローカーによるプロファイリングを防止します。"
   },
   "ghostery_will_be_paused_on_this_site__you_can_change_this_at_any_time_in_ghostery_settings_to_stop_trackers_and_ads_from_tracking_you_around_the_web": {
     "message": "Ghosteryは、このサイトで一時停止されます。 この設定は、Ghosteryの設定でいつでも変更でき、トラッカーや広告がウェブ上であなたを追跡するのを阻止することができます。"
@@ -187,29 +187,35 @@
     "message": "Ghosteryは、このサイトで1時間停止します。"
   },
   "ghostery_will_show_how_many_trackers_were_blocked_on_a_page__clicking_on_the_ghostery_icon_reveals_more_detailed_information_": {
-    "message": "Ghostery will show how many trackers were blocked on a page. Clicking on the Ghostery icon reveals more detailed information."
+    "message": "Ghosteryは、あるページでブロックされたトラッカーの数を表示します。Ghosteryのアイコンをクリックすると、より詳細な情報が表示されます。"
   },
   "hosting": {
     "message": "ホスティング",
     "description": "Tracker category name"
   },
   "ignore": {
-    "message": "Ignore"
+    "message": "無視する"
   },
   "information_about_web_trackers_will_be_shared_in_accordance_with_our__a_href__@_0___privacy_policy__a_": {
-    "message": "Information about web trackers will be shared in accordance with our <a href=\"$${0}\">Privacy Policy</a>"
+    "message": "ウェブトラッカーに関する情報は、当社の<a href=\"$${0}\">プライバシーポリシー</a>に基づき共有されます"
   },
   "it_exists_thanks_to_micro_contributions_of_every_ghostery_user_who_chooses_to_send_non_personal_information_to_whotracks_me__the_input_enables_ghostery_to_provide_real_time_intel_on_trackers_which_in_turn_provides_protection_to_the_entire_ghostery_community_": {
     "message": "これは、WhoTracks.Meに個人情報以外の情報を送信することを選択したGhosteryユーザー全員による、小さな貢献のおかげで存在しています。 入力すると、Ghosteryは見返りとしてトラッカーと保護に関するリアルタイムの情報をGhosteryのコミュニティ全体に提供することができます。"
   },
   "keep_disabled": {
-    "message": "Keep disabled"
+    "message": "無効にしておく"
   },
   "learn_more": {
     "message": "詳細はこちら"
   },
   "let_ghostery_be_your_complete_privacy_advocate_and_reject_all_popups_and_tracking_for_you__or_do_it_yourself_": {
     "message": "Ghosteryをプライバシーの完璧な守護者にして、ポップアップやお客様の追跡を全て拒否するか、ご自身で手動設定しましょう!"
+  },
+	"manifest_name": {
+    "message": "Ghostery – プライバシー広告ブロッカー"
+  },
+  "manifest_short_description": {
+    "message": "Ghosteryは強力なプライバシー拡張機能です。広告をブロックし、トラッカーを阻止し、ウェブサイトを高速化します。"
   },
   "menu": {
     "message": "メニュー"
@@ -270,13 +276,13 @@
     "message": "許可が必要"
   },
   "pin_extension_for_easy_access": {
-    "message": "Pin Extension for easy access"
+    "message": "アクセスしやすいようにExtensionをピン留めする"
   },
   "pin_it_here": {
-    "message": "Pin it here"
+    "message": "ここにピン留め"
   },
   "prevents_various_tracking_techniques_using_ai_driven_technology_": {
-    "message": "Prevents various tracking techniques using AI-driven technology."
+    "message": "AIを活用した技術で様々な追跡手法を防止します。"
   },
   "privacy_policy": {
     "message": "プライバシー・ポリシー"
@@ -291,7 +297,7 @@
     "message": "WhoTracks.Meで詳細を見る"
   },
   "replaces_the_ghostery_icon_in_the_browser_toolbar_with_the_tracker_wheel_": {
-    "message": "Replaces the Ghostery icon in the browser toolbar with the tracker wheel."
+    "message": "ブラウザのツールバーのGhosteryのアイコンをトラッカーホイールに置き換えます。"
   },
   "report_a_broken_page": {
     "message": "区切られたページを報告"
@@ -306,10 +312,10 @@
     "message": "設定"
   },
   "setup_successful": {
-    "message": "Setup Successful"
+    "message": "セットアップ成功"
   },
   "shows_the_tracker_preview_beside_search_results_": {
-    "message": "Shows the tracker preview beside search results."
+    "message": "検索結果の横にトラッカープレビューを表示します。"
   },
   "sign_in": {
     "message": "サインイン"
@@ -376,10 +382,10 @@
     "message": "WhoTracks.Meとは何か？"
   },
   "what_s_next_": {
-    "message": "What’s next?"
+    "message": "次は何をするのでしょうか？"
   },
   "when_pausing_ghostery_on_individual_websites__those_websites_will_appear_here_": {
-    "message": "When pausing Ghostery on individual websites, those websites will appear here."
+    "message": "個々のウェブサイトでGhosteryを一時停止すると、そのウェブサイトがここに表示されます。"
   },
   "whotracks_me__operated_by_ghostery__is_an_integral_part_of_ghostery_s_ai_anti_tracking_technology__it_is_a_comprehensive_global_resource_on_trackers__bringing_transparency_to_web_tracking_": {
     "message": "Ghosteryが運営するWhoTracks.Meは、GhosteryのAIアンチトラッキング技術に統合されている要素です。 トラッカーに関する最も包括的なグローバルリソースで、Webトラッキングに透明性をもたらしています。"
@@ -394,18 +400,18 @@
     "message": "はい"
   },
   "you_can_adjust_the_settings_below__we_recommend_keeping_them_on_at_all_times_": {
-    "message": "You can adjust the settings below. We recommend keeping them ON at all times."
+    "message": "以下で設定を調整することができます。常時ONにしておくことをお勧めします。"
   },
   "you_can_always_change_these_settings_in_the_nbsp__strong_ghostery_control_panel__strong__": {
     "message": "&nbsp;<strong>Ghostery制御パネル</strong>でこれら設定をいつでも変更できます。"
   },
   "you_can_change_your_mind_at_any_time_and_enable_ghostery_in_the_ghostery_panel_to_start_tracking_the_trackers_": {
-    "message": "You can change your mind at any time and enable Ghostery in the Ghostery panel to start tracking the trackers."
+    "message": "いつでも気が変わったら、GhosteryパネルでGhosteryを有効にして、トラッカーの追跡を開始することができます。"
   },
   "you_will_no_longer_see_tracker_wheels_next_to_the_search_results_": {
     "message": "検索結果の横にトラッカーホイールが表示されなくなります。"
   },
   "your_privacy_features_": {
-    "message": "Your Privacy Features:"
+    "message": "あなたのプライバシーを守る機能:"
   }
 }
